tests/error/poly_errors/non_linear3.err
Error: Expected a copyable type (at $FILE:18:8)
   | 
16 | @guppy
17 | def main() -> None:
18 |     foo(h)
   |         ^ Expected a copyable type, got type `qubit` which is not
   |           implicitly copyable

Guppy compilation failed due to 1 previous error
